style.less
/* ... */
.toolbar-label {
	position: absolute;
}

.toolbar-icon {
	position: relative;
	left: 105px;
}

.table-cell-selected {
	background-color: @background-color-primary;
}

.fixed-table-pagination {
	margin-bottom: 2.5em;
}

.CodeMirror {
	border-left: 1px solid @border-color-heading;
	border: 0;
	height: 100%;

	.cm-atom {
		color: @codemirror-color-atom;
	}

	.cm-bracket {
		color: inherit;
	}

	.cm-builtin {
		color: @codemirror-color-builtin;
	}

	.cm-comment {
		color: @codemirror-color-comment;
	}

	.cm-keyword {
		color: @codemirror-color-keyword;
	}

	.cm-operator {
		color: inherit;
	}

	.cm-string {
		color: @codemirror-color-string;
	}

	.cm-variable-2 {
		color: @codemirror-color-variable-2;
	}

	&-scroll {
		min-height: 320px;
	}

	&-hints {
		direction: ltr;
	}

	&-hint {
		max-width: 19em;
	}
}

pre.CodeMirror-placeholder {
	color: @color-placeholder;
}

.queryEditor {
	border: 0;
	font-family: monospace;
	min-height: 273px;
	padding: 0;
	width: 100%;
}

.exampleQueries {
	width: 160px;
}

.exampleIcons {
	width: 0;
}

iframe.shortUrl {
	border: 0;
	height: 40px;
	width: 250px;
}

div.shortUrl {
	height: 40px;
	width: 250px;
}

.dropdown-menu {
	border-radius: 2px;
}

.query-main {
	display: flex;
	flex-direction: row;
	max-width: 100%;

	& > .toolbar {
		display: flex;
		flex-direction: column;
		flex: 0 0 55px;

		.dropdown-menu {
			padding-left: 0.8em;
			padding-right: 0.8em;
		}
	}
}

.query-helper-and-editor {
	display: flex;
	flex-direction: row;
	flex: 1 1 auto;
}

#query-box {
	position: relative;

	.status {
		color: @color-base--subtle;
		font-size: 12px;
		margin-bottom: 5px;
		min-height: 25px;
		padding: 3px;

		.badge {
			border-radius: 2px;
			border: 1px solid @border-color-soft;
		}

		.list-group-item-danger {
			background-color: @update-background-color-danger;
			color: @update-foreground-color-danger;
			text-decoration-color: @update-foreground-color-danger;
		}

		.list-group-item-success {
			background-color: @update-background-color-success;
			color: @update-foreground-color-success;
			text-decoration-color: @update-foreground-color-success;
		}

		.list-group-item-warning {
			background-color: @update-background-color-warning;
			color: @update-foreground-color-warning;
			text-decoration-color: @update-foreground-color-warning;
		}
	}

	.nav {
		margin-left: 0;
	}

	.toolbar {
		border-right: 1px solid @border-color-heading;

		.fa {
			font-size: 1.5em;
		}

		&-bottom {
			flex-grow: 0;
			padding-bottom: 0.2em;
			padding-top: 1em;
			text-align: center;

			.fa {
				font-size: 1.8em;
			}
		}

		&-top {
			flex-grow: 1;
			opacity: 0.5;
			padding-top: 0.5em;
			text-align: center;
			visibility: hidden;
			margin-right: 4px;

			&:hover {
				opacity: 1;
			}
		}
	}
}

.dataUpdated > span:nth-child( 1 ) {
	padding: 5px;
}

.query-editor-container {
	flex: 1 1 auto;
	width: 100%;
}

.splitter {
	background-color: @background-color-primary;
	background-image: url( data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAhCAQAAABOpSL+AAAAIklEQVR4AWMwbb/PdR+JZDD9f1/oPhI5sgVGBSruc9xHIgGdSQqqQJGkRgAAAABJRU5ErkJggg== ); /* node_modules/jquery-resizable-dom/assets/vsizegrip.png */
	background-position: center center;
	background-repeat: no-repeat;
	cursor: col-resize;
	flex: 0 0 auto;
	width: 1em;
}

.jq-toast-single a {
	border: 0;
}

.alert {
	margin-bottom: 0;
}

.popover {
	border-radius: 2px;
	max-width: 80vw;
	width: auto;
}

.popover-title {
	border-radius: 2px;
}

.dropdown-toggle {
	.fa::before,
	.glyphicon::before {
		margin-right: 3px;
	}
}

.nav > li {
	float: left;
}

.nav-tabs > li > a {
	border-radius: 2px 2px 0 0;
}

/**
	To allow dropdown to function normally in small screens
	and allow buttons display the same way as in full size
**/
@media ( max-width: 768px ) {
	.navbar {
		&-left {
			float: left !important;
			margin: 0;
		}

		&-right {
			float: right !important;
		}

		&-nav .open .dropdown-menu {
			-webkit-box-shadow: 0 1px 2px rgba( 0, 0, 0, 0.175 );
			background-color: @background-color-base;
			border: 1px solid @border-color-soft;
			box-shadow: 0 1px 2px rgba( 0, 0, 0, 0.175 );
			position: absolute;
			width: auto;
		}

		&-collapse.in {
			overflow-y: visible;
		}
	}

	.panel-body .table td {
		display: inline-block;
	}
}

/*
	editor hint style
*/
.wikibase-rdf-hint {
	border-bottom: 1px solid @border-color-heading;
	white-space: normal;
}

/**
	Keyboard Shortcut Help dialog
**/
.keyboard-shortcut-help td,
.keyboard-shortcut-help th {
	padding: 8px;
	vertical-align: middle;
}

/**
	Query example dialog
**/
.QueryExamples {
	.modal-content {
		border-radius: 2px;
		padding: 20px 15px;

		.tag {
			background-color: @color-primary;
			background-image: none;
			padding: 0.4em 0.6em;
			text-shadow: none;

			&:hover,
			&:active {
				background: @color-primary;
			}
		}

		.tagCloud {
			height: 200px;
			width: 100%;
		}

		input.tags-input {
			visibility: hidden;
		}

		.tagFilter {
			padding-bottom: 5px !important;
		}

		.exampleTable {
			border: 1px solid @border-color-base;
			max-height: 500px;
			overflow-x: hidden;
			overflow-y: auto;

			td {
				padding: 8px 10px;
			}

			.glyphicon-pencil {
				margin-left: 0.3em;
			}
		}

		.input-group-addon {
			border-radius: 2px;
			border: 1px solid @border-color-base;
		}
	}
}

.modal-content {
	border-radius: 2px;
}

.explorer-dialog {
	position: absolute !important;
	display: none;
	z-index: 1000;
	background-color: @background-color-base;
	resize: both;
	overflow: none;
}

.explorer-dialog iframe {
	height: 100%;
	width: 100%;
}

.explorer-body {
	height: 100%;
	width: 100%;
	padding: 0 0 15px 0;
}

.explorer-header {
	height: 55px;
	background-image: linear-gradient( to bottom, #f5f5f5 0, #e8e8e8 100% );
	background-repeat: repeat-x;
}

.explorer-title {
	font-size: 1.3em;
}
/* ... */

